--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  each group in newHiresByDate
+    .column
+      b= group.date
+      ul
+        each hire in group.hires
+          li
+            p= hire.name
+            p= hire.role
+
