lk | updating styles

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,1 @@
-body{padding:50px;font:14px "Open Sans",Helvetica,Arial,sans-serif}a{color:#00B7FF}ul{list-style:none}
+body{padding:50px;font:14px "Open Sans",Helvetica,Arial,sans-serif}a{color:#00B7FF}ul{list-style:none;padding:0}b{background:#FFF139;display:block;padding-left:.5rem}li{padding:.5rem;margin:.5rem 0;background:#87FFFB;height:5rem}
