--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,3 +1,9 @@
+@dev-blue: #87FFFB;
+@ba-orange: #FFB649;
+@qa-pink: #9CFF95;
+@xd-green: #E572DC;
+@header-yellow: #FFF139;
+
 body {
   padding: 50px;
   font: 14px "Open Sans", Helvetica, Arial, sans-serif;
@@ -9,4 +15,19 @@ a {
 
 ul {
   list-style: none;
+  padding: 0;
+}
+
+b {
+  background: @header-yellow;
+  display: block;
+  padding-left: 0.5rem;
+
+}
+
+li {
+  padding: 0.5rem;
+  margin: 0.5rem 0;
+  background: @dev-blue;
+  height: 5rem;
 }
